--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="importmap">
       {
         "imports": {
-          "@unegma/rain-sdk": "https://unpkg.com/@unegma/rain-sdk@2.0.5/dist/index.js",
+          "rain-sdk": "https://unpkg.com/rain-sdk@0.0.1-alpha.7/dist/rain-sdk.esm.js",
           "ethers": "https://unpkg.com/ethers@5.6.2/dist/ethers.esm.js"
         }
       }
