--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       }
     </script>
     <script type="module" src="./index.js"></script>
+    <div><p>Sale Example (check your console and make sure you have a browser wallet installed and connected to Mumbai testnet)</p></div>
 </body>
 </html>
