--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       {
         "imports": {
           "rain-sdk": "https://unpkg.com/rain-sdk@0.1.3/dist/rain-sdk.esm.js",
-          "ethers": "https://unpkg.com/ethers@5.6.2/dist/ethers.esm.js"
+          "ethers": "https://unpkg.com/ethers@5.6.2/dist/ethers.esm.js",
+          "@unegma/utils": "https://unpkg.com/@unegma/utils@3.0.9/dist/index.js"
         }
       }
     </script>
     <script type="module" src="./index.js"></script>
-    <div><p>Sale Example (check your console and make sure you have a browser wallet installed and connected to Mumbai testnet)</p></div>
+    <div id="console"></div>
 </body>
 </html>
